Simplify configuration and improve debugging documentation (#28)
### TL;DR

Improved configuration handling and added comprehensive debugging tools for the NSW Transport API integration.

### What changed?

- Updated configuration loading to prioritize environment variables, then local.properties, then application.yaml
- Added detailed logging for NSW API requests/responses with clear formatting
- Simplified and clarified documentation with focused guides for configuration and debugging
- Added a test script (`scripts/test-trip-planning.sh`) for automated API testing
- Improved error handling with clear messages when API key is missing
- Added `.kotlin` to .gitignore

### How to test?

1. Set up your API key in `local.properties`:
   ```
   nsw.apiKey=your-jwt-token-here
   ```

2. Run the server:
   ```bash
   ./gradlew :server:run
   ```

3. Test with the automated script:
   ```bash
   ./scripts/test-trip-planning.sh
   ```

4. Or manually test:
   ```bash
   curl "http://localhost:8080/api/v1/trip/plan?origin=200060&destination=200020" | jq
   ```

### Why make this change?

- Makes configuration more robust with clear priority order
- Improves developer experience with better error messages and debugging tools
- Provides comprehensive logging to troubleshoot API integration issues
- Makes testing easier with automated scripts and clear documentation
- Ensures the application fails fast with helpful messages when configuration is missing